yaml_files/example-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  namespace: example
  labels:
    name: example-backend
    app: example
spec:
  replicas: 4
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        name: example-backend
        app: example
    spec:
      containers:
      - name: example-backend-container
        image: taleodor/example-express@sha256:8328cd7de911367ef2a52a60f8696720e89c152c9a437983c7eccf411b0ede75
        ports:
        - containerPort: 3000
