yaml_files/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mafia-ui
  namespace: mafia
  labels:
    name: mafia-ui
    app: mafia
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mafia
  template:
    metadata:
      labels:
        name: mafia-ui
        app: mafia
    spec:
      containers:
      - name: mafia-ui-container
        image: taleodor/mafia-vue@sha256:04be42ee28a9483166fb1bc0e66fa3f079c056cd2a4545411dfd5ca17b3b4fa2
        ports:
        - containerPort: 80
