yaml_files/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mafia-backend-service
  namespace: mafia
spec:
  selector:
    app: mafia
    name: mafia-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
