yaml_files/example-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-backend-service
  namespace: example
spec:
  selector:
    app: example
    name: example-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
