yaml_files/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: mafia
spec:
  selector:
    app: mafia
    name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
